Add support for logging access log to stdout

--- a/files/squid/squid.conf
+++ b/files/squid/squid.conf
@@ -18,3 +18,7 @@ httpd_suppress_version_string on
 
 ssl_bump server-first all
 sslproxy_cert_error allow all
+log_mime_hdrs on
+
+# Required to redirect logs to stdout
+access_log stdio:/var/log/squid/access.log
